objects/signaturit__SignatureSignerFile__c.object
<CustomObject>
    <description>MN relationship between signers and files</description>
    <fields>
        <fullName>signaturit__AuditTrailAttachmentId__c</fullName>
        <description>Audit trail file or attachment record Id</description>
        <inlineHelpText>Audit trail file or attachment record Id</inlineHelpText>
        <label>Audit trail attachment id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__CancelCount__c</fullName>
        <formula>IF(
OR(ISPICKVAL(signaturit__Status__c, &apos;email_bounced&apos;), ISPICKVAL(signaturit__Status__c, &apos;document_declined&apos;), ISPICKVAL(signaturit__Status__c , &apos;document_expired&apos;), ISPICKVAL(signaturit__Status__c, &apos;document_canceled&apos;), ISPICKVAL(signaturit__Status__c, &apos;error&apos;)),
1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancel Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>signaturit__CompletedCount__c</fullName>
        <formula>IF(
  OR(ISPICKVAL(signaturit__Status__c, &apos;document_signed&apos;), ISPICKVAL(signaturit__Status__c, &apos;document_completed&apos;), ISPICKVAL(signaturit__Status__c, &apos;validated&apos;)),
  1,
  0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>signaturit__OrderIndex__c</fullName>
        <description>Order in which the document-signer was sended to the API</description>
        <inlineHelpText>Order in which the document-signer was sended to the API</inlineHelpText>
        <label>Order Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>signaturit__SignatureRequestFile__c</fullName>
        <description>Parent file of the relation</description>
        <inlineHelpText>Parent file of the relation</inlineHelpText>
        <label>Signature Request File</label>
        <referenceTo>signaturit__SignatureRequestFile__c</referenceTo>
        <relationshipLabel>Signer Files</relationshipLabel>
        <relationshipName>Signature_signer_files</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>signaturit__SignatureRequestSigner__c</fullName>
        <description>Parent signer record</description>
        <inlineHelpText>Parent signer record</inlineHelpText>
        <label>Signature Request Signer</label>
        <referenceTo>signaturit__SignatureRequestSigner__c</referenceTo>
        <relationshipLabel>Signer Files</relationshipLabel>
        <relationshipName>SignatureSignerFiles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>signaturit__SignaturitId__c</fullName>
        <description>Id of the relation in Signaturit systems</description>
        <externalId>true</externalId>
        <inlineHelpText>Id of the relation in Signaturit systems</inlineHelpText>
        <label>Signaturit Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__SignedDocumentAttachmentId__c</fullName>
        <description>Record Id of the  signed document stored as Attachment or File</description>
        <inlineHelpText>Record Id of the  signed document stored as Attachment or File</inlineHelpText>
        <label>Signed document attachment Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Status__c</fullName>
        <description>Status for the signer regarding the file</description>
        <inlineHelpText>Status for the signer regarding the file</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>audit_trail_completed</fullName>
                    <label>Audit Trail Completed</label>
                </value>
                <value>
                    <fullName>document_canceled</fullName>
                    <label>Document Canceled</label>
                </value>
                <value>
                    <fullName>document_completed</fullName>
                    <label>Document Completed</label>
                </value>
                <value>
                    <fullName>document_declined</fullName>
                    <label>Document Declined</label>
                </value>
                <value>
                    <fullName>document_expired</fullName>
                    <label>Document Expired</label>
                </value>
                <value>
                    <fullName>document_opened</fullName>
                    <label>Document Opened</label>
                </value>
                <value>
                    <fullName>document_signed</fullName>
                    <label>Document Signed</label>
                </value>
                <value>
                    <fullName>email_delivered</fullName>
                    <label>Email Delivered</label>
                </value>
                <value>
                    <fullName>email_opened</fullName>
                    <label>Email Opened</label>
                </value>
                <value>
                    <fullName>email_processed</fullName>
                    <label>Email Processed</label>
                </value>
                <value>
                    <fullName>email_bounced</fullName>
                    <label>Email Bounced</label>
                </value>
                <value>
                    <fullName>email_deferred</fullName>
                    <label>Email Deferred</label>
                </value>
                <value>
                    <fullName>reminder_email_processed</fullName>
                    <label>Reminder Email Processed</label>
                </value>
                <value>
                    <fullName>reminder_email_delivered</fullName>
                    <label>Reminder Email Delivered</label>
                </value>
                <value>
                    <fullName>reminder_email_opened</fullName>
                    <label>Reminder Email Opened</label>
                </value>
                <value>
                    <fullName>validated</fullName>
                    <label>Validated</label>
                </value>
                <value>
                    <fullName>error</fullName>
                    <label>Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Documento de Firmante</label>
    <nameField>
        <displayFormat>SSF-{00000000}</displayFormat>
        <label>Signature signer file Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documentos de Firmantes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>